--- a/GithubLabelSetUpper/GithubLabelSetUpper.csproj
+++ b/GithubLabelSetUpper/GithubLabelSetUpper.csproj
@@ -26,6 +26,6 @@
     <PackageReference Include="Utf8Json" Version="1.3.7" />
     <PackageReference Include="YamlDotNet" Version="6.1.2" />
     <PackageReference Include="Octokit" Version="0.32.0" />
-    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.3.1" />
+    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.4.0-beta.81" />
   </ItemGroup>
 </Project>
