--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,10 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: UseDotNet@2
+  inputs:
+    version: 3.x
+    includePreviewVersions: true
 - task: DotNetCoreCLI@2
   inputs:
     command: test
