--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,11 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+# for test executing
+- task: UseDotNet@2
+  inputs:
+    version: 2.2.x
+# for build C# 8.0
 - task: UseDotNet@2
   inputs:
     version: 3.x
