--- a/example/example.yml
+++ b/example/example.yml
@@ -3,7 +3,7 @@
   description: Something isn't working
   aliases:
     - bug
-- name: Feature Request
+- name: Feature
   color: a2eeef
   description: New feature or request
   aliases:
