--- a/GiteaLabelSetUpper/GiteaLabelSetUpper.csproj
+++ b/GiteaLabelSetUpper/GiteaLabelSetUpper.csproj
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.4.0-beta.81" />
+    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.4.1" />
     <PackageReference Include="Utf8Json" Version="1.3.7" />
     <PackageReference Include="YamlDotNet" Version="6.1.2" />
   </ItemGroup>
